인트로 디벨롭

--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -18,6 +18,14 @@
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/Draggable.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <!-- GSAP & ScrollTrigger -->
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.35/bundled/lenis.min.js"></script>
     <script src="./js/introkim.js"></script>
 </head>
 
@@ -122,28 +130,33 @@
                             <li class="box_w">
                                 <img src="assets/icon_drama.png" alt="">
                                 <div class="txt_w">
-                                    <p>4,127</p>
-                                    <em>Hrs od Drama</em>
+                                    <p><span class="count" data-count-to="4127">0</span></p>
+                                    <em>Hrs of Drama</em>
                                 </div>
                             </li>
+
                             <li class="box_b">
-                                <div><img src="assets/icon_creator.png" alt="">
+                                <div>
+                                    <img src="assets/icon_creator.png" alt="">
                                     <div class="txt_b">
-                                        <p>263</p>
+                                        <p><span class="count" data-count-to="263">0</span></p>
                                         <em>Creators</em>
                                     </div>
-                            </li class="txt">
+                                </div>
+                            </li>
+
                             <li class="box_w">
                                 <img src="assets/icon_knowhow.png" alt="">
                                 <div class="txt_w">
-                                    <p>17</p>
+                                    <p><span class="count" data-count-to="17">0</span></p>
                                     <em>yrs of Knowhow</em>
                                 </div>
                             </li>
+
                             <li class="box_b">
                                 <img src="assets/icon_salesmarket.png" alt="">
                                 <div class="txt_b">
-                                    <p>200+</p>
+                                    <p><span class="count" data-count-to="200" data-suffix="+">0</span></p>
                                     <em>Sales Markets</em>
                                 </div>
                             </li>
