--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -1130,7 +1130,7 @@
                                     </svg>
                                     <p>January</p>
                                     <img src="assets/image/sygnal.jpg" alt=""></img><em>tvN's
-                                        "Signal"<br /><br />Achieves 12% viewership
+                                        "Signal"<br />Achieves 12% viewership
                                         ratings</em>
                                 </li>
                             </ul>
