임시 업로드

--- a/work_ryu.html
+++ b/work_ryu.html
@@ -127,9 +127,7 @@
                                             <p class="meta_info">2022 | Revenge · Psychological thriller | 18+</p>
                                             <div class="description">
                                                 <p>"WELCOME TO MY HELL"</p>
-                                                <p>Years after surviving horrific abuse in high school, a woman puts an
-                                                    elaborate revenge scheme in motion to make the perpetrators pay for
-                                                    their crimes.</p>
+                                                <p>Years after surviving horrific abuse in high school, a woman puts an elaborate revenge scheme in motion to make the perpetrators pay for their crimes.</p>
                                             </div><!-- .description -->
                                         </div><!-- .text_box_left -->
 
@@ -694,7 +692,7 @@
                                             src="https://www.figma.com/api/mcp/asset/953db616-409e-4919-996d-6953483c5840"
                                             alt="">
                                         <img class="icon_img"
-                                            src="https://www.figma.com/api/mcp/asset/a70db404-ce08-4a17-af87-c1bb40d0c76a"
+                                            src="Work_Ryu/asset/icon_Yongsoon.png"
                                             alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
@@ -998,7 +996,7 @@
                             </div><!-- //.input_text_area -->
                             <div class="input_controls">
                                 <button class="btn_emoji">
-                                    <img src="https://www.figma.com/api/mcp/asset/cafbd64b-3940-427c-a30b-39427024c15a"
+                                    <img src="Work_Ryu/asset/icon_smile.svg"
                                         alt="emoji">
                                 </button><!-- //.btn_emoji -->
                                 <button class="btn_send">SEND</button>
@@ -1084,8 +1082,7 @@
 
                         <div class="footer_info">
                             <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu,
-                                Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu,Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
                             <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
                         </div><!-- //.footer_info -->
                     </div><!-- //.footer_bottom -->
