--- a/work_ryu.html
+++ b/work_ryu.html
@@ -29,7 +29,7 @@
         <div class="wrap">
             <header class="">
                 <div class="inner">
-                    <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                    <h1><a href="/index.html" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
                     <nav class="">
                         <ul class="gnb">
                             <li class=""><a href="#">ABOUT</a>
@@ -127,7 +127,9 @@
                                             <p class="meta_info">2022 | Revenge · Psychological thriller | 18+</p>
                                             <div class="description">
                                                 <p>"WELCOME TO MY HELL"</p>
-                                                <p>Years after surviving horrific abuse in high school, a woman puts an elaborate revenge scheme in motion to make the perpetrators pay for their crimes.</p>
+                                                <p>Years after surviving horrific abuse in high school, a woman puts an
+                                                    elaborate revenge scheme in motion to make the perpetrators pay for
+                                                    their crimes.</p>
                                             </div><!-- .description -->
                                         </div><!-- .text_box_left -->
 
@@ -691,9 +693,7 @@
                                         <img class="icon_bg"
                                             src="https://www.figma.com/api/mcp/asset/953db616-409e-4919-996d-6953483c5840"
                                             alt="">
-                                        <img class="icon_img"
-                                            src="Work_Ryu/asset/icon_Yongsoon.png"
-                                            alt="">
+                                        <img class="icon_img" src="Work_Ryu/asset/icon_Yongsoon.png" alt="">
                                     </div><!-- //.profile_icon -->
                                     <div class="profile_name">
                                         <span class="name">myongsooni</span>
@@ -769,7 +769,7 @@
                                 </div><!-- //.replies_container -->
                             </div><!-- //.comment_item -->
 
-                            <!-- Comment 3 -->  
+                            <!-- Comment 3 -->
                             <div class="comment_item">
                                 <div class="profile">
                                     <div class="profile_icon">
@@ -996,8 +996,7 @@
                             </div><!-- //.input_text_area -->
                             <div class="input_controls">
                                 <button class="btn_emoji">
-                                    <img src="Work_Ryu/asset/icon_smile.svg"
-                                        alt="emoji">
+                                    <img src="Work_Ryu/asset/icon_smile.svg" alt="emoji">
                                 </button><!-- //.btn_emoji -->
                                 <button class="btn_send">SEND</button>
                             </div><!-- //.input_controls -->
@@ -1011,8 +1010,7 @@
                     <div class="event_section">
                         <div class="event_box">
                             <div class="event_img">
-                                <img src="Work_Ryu/asset/"
-                                    alt="SD CREW">
+                                <img src="Work_Ryu/asset/" alt="SD CREW">
                             </div><!-- //.event_img -->
                             <div class="event_content">
                                 <div class="event_inner">
@@ -1027,7 +1025,7 @@
                     </div><!-- //.event_section -->
                 </section><!-- //.chat_event_section -->
             </div><!-- //.inner -->
-            
+
             <footer class="ver_dark">
                 <div class="footer_inner">
                     <!-- Top Area -->
@@ -1082,7 +1080,8 @@
 
                         <div class="footer_info">
                             <p class="footer_info_text">CEO : Jang Kyung-ik</p>
-                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro, Mapo-gu,Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
+                            <p class="footer_info_text">Studio Dregon Corporation, 17F1, 75, Maebongsan-ro,
+                                Mapo-gu,Seoul, Republic of Korea | Business registration number : 747-81-00388</p>
                             <p class="footer_info_text">© STUDIO DRAGON.All Rights Reserved.</p>
                         </div><!-- //.footer_info -->
                     </div><!-- //.footer_bottom -->
