--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -426,7 +426,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <em>
                                         "The Glory" won the 'Best Drama Series' and 'Best Actress in a Supporting
                                         Role'
@@ -483,7 +483,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <em>Korea's Drama Production Industry Publishes First
                                         Sustainability Report</em>
                                 </li>
@@ -569,7 +569,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <em>Winner of "Twenty Five Twenty One (Best Drama Series), "Our
                                         Blues (Best Screenplay)," and "Yumi's Cells (Best Original Programme by a
                                         Streamer/OTT)" at the Singapore Asian Academy Creative Awards (AACA)</em>
@@ -616,7 +616,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <em>Acquired a subsidiary of Gil Pictures, the producer of
                                         "Stove League," "Wonder Woman," and "Juvenile Justice"<br /><br />
                                         "Studio Dragon" selected as an IR Outstanding Company for the fourth
@@ -711,7 +711,17 @@
                                     <p>October</p>
                                     <img src="assets/image/vinsenzo.jpg" alt=""></img><em>
                                         "Vincenzo" Wins Grand Prize in the Hallyu Drama Category at the 2021 Seoul
-                                        International Drama Awards<br /><br />
+                                        International Drama Awards
+                                    </em>
+                                </li>
+                                <li class=""><!-- 빈센조 -->
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
+                                        fill="none">
+                                        <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
+                                            stroke-width="3" />
+                                    </svg>
+                                    <p>&nbsp;</p>
+                                    <em>
                                         "Vincenzo" Wins Special Award in the Overseas Category at the 2021 Tokyo
                                         International Drama Festival<br /><br />"Start-Up" Wins Excellence Award in
                                         the Hallyu Drama Category at the 2021 Seoul International Drama Awards
@@ -768,13 +778,20 @@
                                     <img src="assets/image/thats_ok.jpg" alt=""></img><em>
                                         "It's Okay to Not Be Okay" selected as one of the "Best International Shows
                                         of 2020"
-                                        by the New York Times<br /><br />
-                                        "Crash Landing on You" selected as Best International TV Series of 2020 by
+                                        by the New York Times</em>
+                                </li>
+                                <li class="">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
+                                        fill="none">
+                                        <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
+                                            stroke-width="3" />
+                                    </svg>
+                                    <p>&nbsp;</p>
+                                    <em>"Crash Landing on You" selected as Best International TV Series of 2020 by
                                         Variety<br /><br />
                                         "Crash Landing on You" and "The Cursed" won Best Drama Series and Best
                                         Original Screenplay, respectively, at the Singapore Asian Academy
-                                        Creative Awards (AACA).
-                                    </em>
+                                        Creative Awards (AACA).</em>
                                 </li>
                                 <li class="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
@@ -804,7 +821,16 @@
                                     <p>September</p>
                                     <img src="assets/image/hotel_delluna.png" alt=""></img><em>
                                         "Hotel Del Luna" won the Excellence Award at the 2020 Korea Communications
-                                        Commission Broadcasting Awards<br /><br />
+                                        Commission Broadcasting Awards
+                                    </em>
+                                </li>
+                                <li class="">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23"
+                                        fill="none">
+                                        <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
+                                            stroke-width="3" />
+                                    </svg>
+                                    <p>&nbsp;</p><em>
                                         "Crash Landing on You" won the Excellence Award in the Hallyu Drama category
                                         at
                                         the 2020 Seoul International Drama Awards
@@ -1083,7 +1109,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p>&nbsp;</p>
+                                    <p></p>
                                     <img src="assets/image/dokkabi.jpg" alt=""></img><em>tvN's "Goblin"<br />Reaches
                                         20%
                                         Viewership Ratings</em>
@@ -1236,7 +1262,7 @@
                                         <circle cx="11.5" cy="11.5" r="10" fill="#F5D6D0" stroke="#BD4033"
                                             stroke-width="3" />
                                     </svg>
-                                    <p></p>
+                                    <p>&nbsp;</p>
                                     <em>OCN's "Bad Guys" reached 4%</em>
                                 </li>
                             </ul>
