수정했습니다10.23.3.14

--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./lee/css/style.css">
   <link rel="stylesheet" href="./lee/css//media.css">
 
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <!-- GSAP Core -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -23,6 +24,7 @@
   <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
   <script src="js/common.js"></script>
   <script src="./lee/js/filter.js" defer></script>
+
   <title>list of work</title>
 </head>
 
@@ -435,6 +437,7 @@
       </div><!-- //.footer_inner -->
     </footer><!-- //.footer -->
   </div><!-- //.wrap -->
+  </script>
 </body>
 
 </html>
