--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -26,6 +26,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.35/bundled/lenis.min.js"></script>
+    <script src="../back/js/MainBack.js"></script>
     <script src="./js/introkim.js"></script>
 </head>
 
