--- a/yul/Listworks_lee.html
+++ b/yul/Listworks_lee.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>list of work</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="shortcut icon" href="back/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/common.css">
   <link rel="stylesheet" href="/css/main_media.css">
-  <link rel="stylesheet" href="/lee/css/style.css">
-  <link rel="stylesheet" href="/lee/css/media.css">
+  <link rel="stylesheet" href="/yul/css/style.css">
+  <link rel="stylesheet" href="/yul/css/media.css">
 
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -23,9 +24,9 @@
   <!-- SplitText 플러그인 -->
   <!-- <script src="https://assets.codepen.io/16327/SplitText3.min.js"></script> -->
   <script src="/js/common.js"></script>
-  <script src="/lee/js/filter.js" defer></script>
+  <script src="/yul/js/filter.js" defer></script>
 
-  <title>list of work</title>
+
 </head>
 
 <body>
@@ -34,7 +35,7 @@
       <div class="header_bg">
       </div>
       <div class="inner">
-        <h1><a href="#" class="logo"><img src="asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
+        <h1><a href="#" class="logo"><img src="/asset/logo_w.png" alt="StudioDragonLogo"></a></h1>
         <nav>
           <ul class="gnb">
             <li class=""><a href="#">ABOUT</a>
@@ -81,7 +82,7 @@
               <a href="#">KR</a>
             </div><!-- //.lang -->
             <div class="user">
-              <a href="#"><img src="asset/user.png" alt="user"></a>
+              <a href="#"><img src="/asset/user.png" alt="user"></a>
             </div><!-- //.user -->
             <div class="ham">
               <ul>
@@ -147,8 +148,11 @@
       </div>
     </section>
     <section class="text_reveal_section">
-      <p class="opacity_reveal" id="animated-text">If you're lucky, Studio Dragon will come into your story,
-        steal your heart, and change the world.</p>
+      <div class="opacity_reveal txt_area" id="animated-text">
+        <p class="tit1 tit">If you're lucky,</p>
+        <p class="tit2 tit">Studio Dragon will come into your story,</p>
+        <p class="tit3 tit">steal your heart, and change the world.</p>
+      </div>
     </section>
 
     <!--<div class="signature-works">
@@ -156,15 +160,15 @@
     </div>
     <div class="sw_img">
       <div class="sw_item">
-        <img src="./lee/img/Queen of Tears.webp" alt="">
+        <img src="/lee/img/Queen of Tears.webp" alt="">
         <p>Queen of Tears</p>
       </div>
       <div class="sw_item">
-        <img src="./lee/img/The Glory4.jpg" alt="">
+        <img src="/lee/img/The Glory4.jpg" alt="">
         <p>The Glory</p>
       </div>
       <div class="sw_item">
-        <img src="./lee/img/Marry My Husband.jpg" alt="">
+        <img src="/lee/img/Marry My Husband.jpg" alt="">
         <p>Marry My Husband</p>
       </div>
     </div> -->
@@ -211,121 +215,121 @@
       <ul class="poster-list">
         <li>
           <a href="#">
-            <img src="./lee/img/Our_Blooming_Youth.webp" alt="Poster 1">
+            <img src="/lee/img/Our_Blooming_Youth.webp" alt="Poster 1">
             <span class="poster-title">Our Blooming Youth</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Love_take_two.webp" alt="Poster 2">
+            <img src="/lee/img/Love_take_two.webp" alt="Poster 2">
             <span class="poster-title">Love take two</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/My_Dearest_Nemesis2.webp" alt="Poster 3">
+            <img src="/lee/img/My_Dearest_Nemesis2.webp" alt="Poster 3">
             <span class="poster-title">My Dearest Nemesis</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/our_Blues.jpg" alt="Poster 4">
+            <img src="/lee/img/our_Blues.jpg" alt="Poster 4">
             <span class="poster-title">Our Blues</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Twenty_Five_Twenty.webp" alt="Poster 5">
+            <img src="/lee/img/Twenty_Five_Twenty.webp" alt="Poster 5">
             <span class="poster-title">Twenty Five Twenty One</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Genie_Make_Wish.webp" alt="Poster 6">
+            <img src="/lee/img/Genie_Make_Wish.webp" alt="Poster 6">
             <span class="poster-title">Genie, Make A Wish</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Typhoon_Family2.webp" alt="Poster 7">
+            <img src="/lee/img/Typhoon_Family2.webp" alt="Poster 7">
             <span class="poster-title">Typhoon Family</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/The_Queen_Crowns.webp" alt="Poster 8">
+            <img src="/lee/img/The_Queen_Crowns.webp" alt="Poster 8">
             <span class="poster-title">The Queen Who Crowns</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Our_Unwritten_Seoul.webp" alt="Poster 9">
+            <img src="/lee/img/Our_Unwritten_Seoul.webp" alt="Poster 9">
             <span class="poster-title">Our Unwritten Seoul</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Under_The_Queens.webp" alt="Poster 10">
+            <img src="/lee/img/Under_The_Queens.webp" alt="Poster 10">
             <span class="poster-title">Under The Queen's <br> Umbrella</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Poong_Psychiatrist.webp" alt="Poster 11">
+            <img src="/lee/img/Poong_Psychiatrist.webp" alt="Poster 11">
             <span class="poster-title">Poong, the Joseon <br> Psychiatrist</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/shin's2.webp" alt="Poster 12">
+            <img src="/lee/img/shin's2.webp" alt="Poster 12">
             <span class="poster-title">shin's project</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Dear_Hongrang.webp" alt="Poster 13">
+            <img src="/lee/img/Dear_Hongrang.webp" alt="Poster 13">
             <span class="poster-title">Dear Hongrang</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Bon_Majesty.webp" alt="Poster 14">
+            <img src="/lee/img/Bon_Majesty.webp" alt="Poster 14">
             <span class="poster-title">Bon Apptit, Your Majesty</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Second_Shot_Love.webp" alt="Poster 15">
+            <img src="/lee/img/Second_Shot_Love.webp" alt="Poster 15">
             <span class="poster-title">Second Shot at Love</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Castaway_Diva4.webp" alt="Poster 16">
+            <img src="/lee/img/Castaway_Diva4.webp" alt="Poster 16">
             <span class="poster-title">Castaway Diva</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Head_Over_Heels.webp" alt="Poster 17">
+            <img src="/lee/img/Head_Over_Heels.webp" alt="Poster 17">
             <span class="poster-title">Head Over Heels</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Captivating_the_King.webp" alt="Poster 18">
+            <img src="/lee/img/Captivating_the_King.webp" alt="Poster 18">
             <span class="poster-title">Captivating the King</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/Study_Group.webp" alt="Poster 19">
+            <img src="/lee/img/Study_Group.webp" alt="Poster 19">
             <span class="poster-title">Study Group</span>
           </a>
         </li>
         <li>
           <a href="#">
-            <img src="./lee/img/love_your_enemy.webp" alt="Poster 20">
+            <img src="/lee/img/love_your_enemy.webp" alt="Poster 20">
             <span class="poster-title">love your enemy</span>
           </a>
         </li>
@@ -355,21 +359,21 @@
       <div class="slide inner">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="./lee/img/Queen of Tears.webp" alt=""><span>Queen of
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen of Tears.webp" alt=""><span>Queen of
                   Tears</span></a></div>
           </div>
         </div>
