--- a/intro_kim/intro.html
+++ b/intro_kim/intro.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/common.css">
+    <!-- <link rel="stylesheet" href="/css/main_media.css"> -->
     <link rel="stylesheet" href="./css/introkim_style.css">
     <link rel="stylesheet" href="./css/intro_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
