--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -146,10 +146,10 @@
         </div>
       </div>
     </section>
-    <section class="text_reveal_section">
+    <!--     <section class="text_reveal_section">
       <p class="opacity_reveal" id="animated-text">If you're lucky, Studio Dragon will come into your story,
         steal your heart, and change the world.</p>
-    </section>
+    </section> -->
 
     <!--<div class="signature-works">
       <h2 class="tit_eng">SIGNATURE WORKS</h2>
@@ -183,8 +183,8 @@
                   Family</span></a></div>
             <div class="swiper-slide"><a href="#"><img src="/lee/img/The_Uncanny_Counter2.webp" alt=""><span>The Uncanny
                   Counter</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/The_Player2.webp" alt=""><span>Queen of
-                  Tears</span></a></div>
+            <div class="swiper-slide"><a href="#"><img src="/lee/img/The_Player2.webp" alt=""><span>The
+                  Player</span></a></div>
             <div class="swiper-slide"><a href="#"><img src="/lee/img/Gyeongseong_Creature.webp" alt=""><span>Gyeongseong
                   Creature</span></a></div>
             <div class="swiper-slide"><a href="#"><img src="/lee/img/Stars_Gossip3.webp" alt=""><span>When the
@@ -338,15 +338,40 @@
           <button type="button">Search</button>
         </div>
 
-        <div class="page-numbers">
+        <div class="container">
+          <ul class="pagination">
+            <li>
+              <a href="#">Prev</a>
+            </li>
+            <li>
+              <a href="#">1</a>
+            </li>
+            <li class="active">
+              <a href="#">2</a>
+            </li>
+            <li>
+              <a href="#">3</a>
+            </li>
+            <li>
+              <a href="#">4</a>
+            </li>
+            <li>
+              <a href="#">5</a>
+            </li>
+            <li>
+              <a href="#">Next</a>
+            </li>
+          </ul>
+        </div>
+        <!--<div class="page-numbers">
           <a href="#" class="page active">1</a>
           <a href="#" class="page">2</a>
           <a href="#" class="page">3</a>
           <a href="#" class="page">4</a>
           <a href="#" class="page">5</a>
           <span class="dots">...</span>
-          <a href="#" class="page">Next ›</a>
-        </div>
+          <a href="#" class="page next">Next ›</a>
+        </div> -->
       </div>
     </section>
 
