지금까지 작업한거 올리기_2

--- a/main_beck.html
+++ b/main_beck.html
@@ -233,21 +233,24 @@
                     </div>
                     <div class="BDcontents">
                         <div class="BDconTop">
-                            <div class="BDsection01">
+                            <div class="BDsection01" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" data-aos-delay="500" data-aos-mirror="true">
                                 <img src="./back/img/BD_section01.jpg" alt="bibimbap">
                                 <div class="BDsection01_txt">
                                     <h3>a dish in a drama</h3>
                                     <span>a tyrant's chef</span>
                                 </div>
                             </div>
-                            <div class="BDsection02">
+                            <div class="BDsection02" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" data-aos-delay="500" data-aos-mirror="true">
                                 <img src="./back/img/BD_section02.png" alt="yumi">
                                 <div class="BDsection02_txt">
                                     <h3>Where is <br>the furniture from?</h3>
                                     <span>Yumi’s Cells</span>
                                 </div>
                             </div>
-                            <div class="BDsection03">
+                            <div class="BDsection03" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" data-aos-delay="500" data-aos-mirror="true">
                                 <img src="./back/img/BD_section03.png" alt="yumi">
                                 <div class="BDsection03_txt">
                                     <h3>Dongeun, you have good skin <br>while taking revenge?</h3>
@@ -256,35 +259,38 @@
                             </div>
                         </div>
                         <div class="BDconMiddle">
-                            <div class="BDsection04">
+                            <div class="BDsection04" >
                                 <h3>Tyrant's Fashion</h3>
                             </div>
-                            <div class="BDsection05">
+                            <div class="BDsection05" >
                                 <h3>Tyrant's Fashion</h3>
                             </div>
-                            <div class="BDsection06">
+                            <div class="BDsection06" >
                                 <h3>Cooking in dramas</h3>
                             </div>
-                            <div class="BDsection07">
+                            <div class="BDsection07" > 
                                 <h3>Where is that furniture from?</h3>
                             </div>
                         </div>
                         <div class="BDconBottom">
-                            <div class="BDsection08">
+                            <div class="BDsection08" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" data-aos-delay="1100" data-aos-mirror="true">
                                 <img src="./back/img/BD_section08.jpg" alt="bibimbap">
                                 <div class="BDsection08_txt">
                                     <h3>a dish in a drama</h3>
                                     <span>a tyrant's chef</span>
                                 </div>
                             </div>
-                            <div class="BDsection09">
+                            <div class="BDsection09" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" data-aos-delay="1100" data-aos-mirror="true">
                                 <img src="./back/img/BD_section09.png" alt="yumi">
                                 <div class="BDsection09_txt">
                                     <h3>Where is <br>the furniture from?</h3>
                                     <span>Yumi’s Cells</span>
                                 </div>
                             </div>
-                            <div class="BDsection10">
+                            <div class="BDsection10" data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" data-aos-delay="1100" data-aos-mirror="true">
                                 <img src="./back/img/BD_section10.png" alt="yumi">
                                 <div class="BDsection10_txt">
                                     <h3>Dongeun, you have good skin <br>while taking revenge?</h3>
@@ -302,7 +308,7 @@
                         <h2>VIEWER'S PLAYGROUND</h2>
                     </div>
                     <div class="VPcontents">
-                        <div class="VPcon01">
+                        <div class="VPcon01" data-aos="fade-up-right" data-aos-mirror="true">
                             <img src="./back/img/VP_img01.png" alt="Scenario Competition">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
@@ -312,7 +318,7 @@
                                 <p>Present your new story. <br> It could be the one to be brought to life on screen.</p>
                             </div>
                         </div><!-- //.VPcon01 -->
-                        <div class="VPcon02">
+                        <div class="VPcon02" data-aos="fade-up-left" data-aos-mirror="true">
                             <img src="./back/img/VP_img02.png" alt="Virtual Casting Vote">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
@@ -322,12 +328,12 @@
                                 <p>Pick a virtual casting combination <br>by changing the drama’s main character.</p>
                             </div>
                         </div><!-- //.VPcon02 -->
-                        <div class="VPcon03">
+                        <div class="VPcon03" data-aos="fade-up-right" data-aos-mirror="true">
                             <img src="./back/img/VP_img03.png" alt="Scenario Competition">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
                                     <h3>Make New Poster</h3>
-                                    <span>Show off your ideas to the <br> fullest</span>
+                                    <span>Show off your ideas to the fullest</span>
                                 </div>
                                 <p>Show off your ideas and talents to the fullest, <br> and create a new drama poster.
                                 </p>
