--- a/IR.html
+++ b/IR.html
@@ -93,7 +93,7 @@
         <main>  
           <section class="value_drivers">
     <div class="title">
-      <h2 class="title">Value Drivers</h2>
+      <h2>Value Drivers</h2>
       <p class="sub">Strategic transitions that strengthen production, marketing and distribution.</p>
     </div><!-- //. title -->
     <div class="container">
@@ -134,16 +134,16 @@
             <p class="text">Parallel prod–post workflow</p>
           </div><!-- //. card_after -->
         </article><!-- //. item_3 -->
+        <aside class="description">
+          <p>Multi-platform launch windows reduce slot congestion and improve reach efficiency.</p>
+          <p>Parallelization shortens turnaround and mitigates schedule risk.</p>
+        </aside><!-- //. description -->
       </div><!-- //. area -->
-      <aside class="description">
-        <p>Multi-platform launch windows reduce slot congestion and improve reach efficiency.</p>
-        <p>Parallelization shortens turnaround and mitigates schedule risk.</p>
-      </aside><!-- //. description -->
     </div><!-- //. container -->
   </section><!-- //. value_drivers -->
   <section class="execution">
     <div class="title">
-      <h2 class="title">Execution</h2>
+      <h2>Execution</h2>
       <p class="sub">Operational playbooks aligned to global releases.</p>
     </div><!-- //. title -->
     <div class="wrapper">
@@ -187,7 +187,7 @@
   </section><!-- //. execution -->
     <section class="proof">
       <div class="title">
-        <h2 class="title">Proof</h2>
+        <h2>Proof</h2>
         <p class="sub">Signals that evidence growth and monetization readiness.</p>
       </div><!-- //. title -->
       <div class="container">
@@ -327,7 +327,7 @@
     </section><!-- //. proof --> 
         <section class="monetization_bridge">
       <div class="title">
-        <h2 class="title">Monetization Bridge</h2>
+        <h2>Monetization Bridge</h2>
         <p class="sub">Diversified revenue mix anchored by distribution and IP licensing.</p>
       </div><!-- //. title -->
       <div class="container">
@@ -393,7 +393,7 @@
     </section><!-- //. monetization_bridge --> 
     <section class="moat_repeatability">
       <div class="title">
-        <h2 class="title">Moat &amp; Repeatability</h2>
+        <h2>Moat &amp; Repeatability</h2>
         <p class="sub">Not luck, a repeatable playbook. These levers drive hit probability and margin structure.</p>
       </div><!-- //. title -->
       <div class="container">
@@ -430,7 +430,7 @@
     <section class="forward_triggers">
       <div class="inner">
         <div class="title">
-          <h2 class="title">Forward Triggers</h2>
+          <h2>Forward Triggers</h2>
           <p class="sub">Milestones that could unlock additional value.</p>
         </div><!-- //. title -->
       <div class="container">
@@ -473,7 +473,7 @@
     </section><!-- //. forward_triggers -->
     <section class="risks_mitigation">
       <div class="title">
-        <h2 class="title">Risks &amp; Mitigation</h2>
+        <h2>Risks &amp; Mitigation</h2>
         <p class="sub">Top-3 risks with mitigations. A mini impact meter justifies the level.</p>
       </div><!-- //. title -->
       <div class="container">
@@ -524,6 +524,17 @@
         </article><!-- //. card_3 -->
       </div><!-- //. container -->
     </section><!-- //. risks_mitigation -->
+    <section class="cta_buttons">
+      <a href="#" class="cta_btn cta_btn_1">
+        <span>Investor Deck</span>
+      </a>
+      <a href="#" class="cta_btn cta_btn_2">
+        <span>Data CSV</span>
+      </a>
+      <a href="#" class="cta_btn cta_btn_3">
+        <span>Request a Meeting</span>
+      </a>
+    </section><!-- //. cta_buttons -->
   </main>
         <footer class="ver_dark ver_white">
             <div class="footer_inner">
