--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </div>
         <header class="">
             <div class="inner">
-                <h1><a href="#" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
+                <h1><a href="/main_beck.html" class="logo"><img src="back/img/logo_w.png" alt="StudioDragonLogo"></a></h1>
                 <nav class="">
                     <ul class="gnb">
-                        <li class=""><a href="#">ABOUT</a>
+                        <li class=""><a href="/companyintroduction_kim.html">ABOUT</a>
                             <ul class="sub">
                                 <li><a href="#">About Us</a></li>
                                 <li><a href="#">Business Ethics</a></li>
@@ -37,10 +37,10 @@
                                 <li><a href="#">Contact & Location</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">WORKS</a>
+                        <li><a href="/Listworks_lee.html">WORKS</a>
                             <ul class="sub">
                                 <li><a href="#">Production List</a></li>
-                                <li><a href="#">Viewer Participation</a></li>
+                                <li><a href="/viewersplayground_moon.html">Viewer Participation</a></li>
                             </ul>
                         </li>
                         <li><a href="#">NEWSROOM</a>
@@ -49,7 +49,7 @@
                                 <li><a href="#">News</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">IR</a>
+                        <li><a href="/IR.html">IR</a>
                             <ul class="sub">
                                 <li><a href="#">IR Insights</a></li>
                                 <li><a href="#">Materials</a></li>
