--- a/main_beck.html
+++ b/main_beck.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="back/css/MainBack_media.css">
     <script src="https://kit.fontawesome.com/672e368b20.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./back/js/MainBack.js"></script>
 </head>
@@ -233,24 +235,21 @@
                     </div>
                     <div class="BDcontents">
                         <div class="BDconTop">
-                            <div class="BDsection01" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                                data-aos-duration="2000" data-aos-delay="500" data-aos-mirror="true">
+                            <div class="BDsection01 gsap-flip">
                                 <img src="./back/img/BD_section01.jpg" alt="bibimbap">
                                 <div class="BDsection01_txt">
                                     <h3>a dish in a drama</h3>
                                     <span>a tyrant's chef</span>
                                 </div>
                             </div>
-                            <div class="BDsection02" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                                data-aos-duration="2000" data-aos-delay="500" data-aos-mirror="true">
+                            <div class="BDsection02 gsap-flip">
                                 <img src="./back/img/BD_section02.png" alt="yumi">
                                 <div class="BDsection02_txt">
                                     <h3>Where is <br>the furniture from?</h3>
-                                    <span>Yumi’s Cells</span>
+                                    <span>Yumi's Cells</span>
                                 </div>
                             </div>
-                            <div class="BDsection03" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                                data-aos-duration="2000" data-aos-delay="500" data-aos-mirror="true">
+                            <div class="BDsection03 gsap-flip">
                                 <img src="./back/img/BD_section03.png" alt="yumi">
                                 <div class="BDsection03_txt">
                                     <h3>Dongeun, you have good skin <br>while taking revenge?</h3>
@@ -273,24 +272,21 @@
                             </div>
                         </div>
                         <div class="BDconBottom">
-                            <div class="BDsection08" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                                data-aos-duration="2000" data-aos-delay="1100" data-aos-mirror="true">
+                            <div class="BDsection08 gsap-flip-bottom">
                                 <img src="./back/img/BD_section08.jpg" alt="bibimbap">
                                 <div class="BDsection08_txt">
                                     <h3>a dish in a drama</h3>
                                     <span>a tyrant's chef</span>
                                 </div>
                             </div>
-                            <div class="BDsection09" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                                data-aos-duration="2000" data-aos-delay="1100" data-aos-mirror="true">
+                            <div class="BDsection09 gsap-flip-bottom">
                                 <img src="./back/img/BD_section09.png" alt="yumi">
                                 <div class="BDsection09_txt">
                                     <h3>Where is <br>the furniture from?</h3>
-                                    <span>Yumi’s Cells</span>
+                                    <span>Yumi's Cells</span>
                                 </div>
                             </div>
-                            <div class="BDsection10" data-aos="flip-left" data-aos-easing="ease-out-cubic"
-                                data-aos-duration="2000" data-aos-delay="1100" data-aos-mirror="true">
+                            <div class="BDsection10 gsap-flip-bottom">
                                 <img src="./back/img/BD_section10.png" alt="yumi">
                                 <div class="BDsection10_txt">
                                     <h3>Dongeun, you have good skin <br>while taking revenge?</h3>
@@ -308,7 +304,7 @@
                         <h2>VIEWER'S PLAYGROUND</h2>
                     </div>
                     <div class="VPcontents">
-                        <div class="VPcon01" data-aos="fade-up-right" data-aos-mirror="true">
+                        <div class="VPcon01 gsap-fade-up-right">
                             <img src="./back/img/VP_img01.png" alt="Scenario Competition">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
@@ -318,17 +314,17 @@
                                 <p>Present your new story. <br> It could be the one to be brought to life on screen.</p>
                             </div>
                         </div><!-- //.VPcon01 -->
-                        <div class="VPcon02" data-aos="fade-up-left" data-aos-mirror="true">
+                        <div class="VPcon02 gsap-fade-up-left">
                             <img src="./back/img/VP_img02.png" alt="Virtual Casting Vote">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
                                     <h3>Virtual Casting Vote</h3>
                                     <span>Pick your ideal cast</span>
                                 </div>
-                                <p>Pick a virtual casting combination <br>by changing the drama’s main character.</p>
+                                <p>Pick a virtual casting combination <br>by changing the drama's main character.</p>
                             </div>
                         </div><!-- //.VPcon02 -->
-                        <div class="VPcon03" data-aos="fade-up-right" data-aos-mirror="true">
+                        <div class="VPcon03 gsap-fade-up-right">
                             <img src="./back/img/VP_img03.png" alt="Scenario Competition">
                             <div class="VPcon_txt">
                                 <div class="VPcon_tit">
