--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -29,6 +29,9 @@
 </head>
 
 <body>
+
+  <div id="star-container"></div>
+
   <div class="wrap">
     <header class="">
       <div class="header_bg">
@@ -173,21 +176,21 @@
       <div class="slide inner">
         <div class="swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Queen_of_Tears.webp" alt="">
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Queen_of_Tears.webp" alt="">
                 <span>Queen of Tears</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/The_Glory4.jpg" alt=""><span>The
+            <div class="swiper-slide"><a href="#"><img src="lee/img/The_Glory4.jpg" alt=""><span>The
                   Glory</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Marry_My_Husband.jpg" alt=""><span>Marry My
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Marry_My_Husband.jpg" alt=""><span>Marry My
                   Husband</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Typhoon_Family.webp" alt=""><span>Typhoon
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Typhoon_Family.webp" alt=""><span>Typhoon
                   Family</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/The_Uncanny_Counter2.webp" alt=""><span>The Uncanny
+            <div class="swiper-slide"><a href="#"><img src="lee/img/The_Uncanny_Counter2.webp" alt=""><span>The Uncanny
                   Counter</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/The_Player2.webp" alt=""><span>The
+            <div class="swiper-slide"><a href="#"><img src="lee/img/The_Player2.webp" alt=""><span>The
                   Player</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Gyeongseong_Creature.webp" alt=""><span>Gyeongseong
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Gyeongseong_Creature.webp" alt=""><span>Gyeongseong
                   Creature</span></a></div>
-            <div class="swiper-slide"><a href="#"><img src="/lee/img/Stars_Gossip3.webp" alt=""><span>When the
+            <div class="swiper-slide"><a href="#"><img src="lee/img/Stars_Gossip3.webp" alt=""><span>When the
                   Stars Gossip</span></a></div>
           </div>
         </div>
@@ -438,7 +441,6 @@
             <div class="footer_logo">
               <img src="./asset/Studio Dragon_symbol.svg" alt="Studio Dragon">
             </div><!-- //.footer_logo -->
-
             <div class="footer_sns">
               <a href="#" class="sns_link" aria-label="Facebook">
                 <img src="https://www.figma.com/api/mcp/asset/5800100e-1025-4331-93b9-282625c7d4cb" alt="Facebook">
