--- a/Listworks_lee.html
+++ b/Listworks_lee.html
@@ -145,7 +145,7 @@
           <img src="lee/img/Queen3.webp" alt="" />
         </div>
         <div class="zoom_item" data-layer="1">
-          <img src="/lee/img/Heels.jpg" alt="" />
+          <img src="lee/img/Heels.jpg" alt="" />
         </div>
       </div>
     </section>
